--- a/style/css/application.css
+++ b/style/css/application.css
@@ -22,10 +22,14 @@ a {
   a:hover {
     color: #000; }
 
+.content {
+  font-size: 1.4em; }
+
 #navigation {
   background: #FFF;
   border-bottom: 1px solid #CCC;
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: 10; }
   #navigation .nav {
@@ -58,7 +62,23 @@ a {
     padding-right: 0; }
 
 .section {
-  height: 500px;
-  border-bottom: 1px dashed #333; }
+  border-bottom: 1px dashed #333;
+  height: 100%;
+  min-height: 700px; }
+  .section .section-content {
+    background-color: rgba(150, 150, 150, 0.4);
+    margin: 0 auto;
+    padding: 80px 10px;
+    min-height: 200px;
+    text-align: center;
+    width: 700px; }
+  .section#about {
+    background: url("../../imgs/about.JPG");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    color: #FFF; }
+    .section#about .section-content {
+      margin-top: 50px; }
 
 /*# sourceMappingURL=application.css.map */
